# identicon

./: .gitignore  LICENSE  README.md
apps/: README.md  install-mkdocs.md
apps/docs/: README.md  deploy.sh  mkdocs copy.yml  mkdocs.yml
apps/fedevida/: Dockerfile  deploy.sh  next.config.js
apps/main/: .env.development  .env.example  .env.production  README.md  TODO.md  deploy.sh  fedevida.conf  next.config.js  package-lock.json  package.json
apps/root/: index.html
contracts/: .gitignore  Cargo.toml  README.md  deploy.sh
contracts/credential/: Cargo.toml  build.sh  steps
contracts/credential/neardev/: dev-account  dev-account.env
contracts/credential/src/: lib.rs
contracts/identicon/: deploy.sh  run-request.sh
contracts/src/: definitions.rs  errors.rs  lib.rs  master.rs  requests.rs  tests.rs  utils.rs  validators.rs
db/: identicon_gw_db.sqlite  identicon_gw_db.sqlite.sqbpro  identicon_gw_db.sqlite.test
docs/: README.md  architecture.md  basic-concepts.en.md  conceptos-basicos.md  data-models.md  docs.conf  index.md  meetings.md  onboarding-nuevos-usuarios.md  open-api.md  references.md  securing-verification-info.md  verifiable-credential.md
docs/api/: accounts-api.md  verifications-api.md
docs/apis/: accounts-api.md  contracts-api.md  gateway-api.md  sessions-api.md  tasks-api.md  verifications-api.md
docs/ideas/: draft-private-session-contract.md  securing-verification-info-v2.md
docs/models/: gateway-data-model.md  (+1 more)
gateway/: .env.local.sample  .eslintrc.json  README.md  api.conf  deploy.sh  docker-compose.yml  jest.config.js  package.json
(+224 files in other folders)
