[package]
name = "credential"
version = "0.0.1"
authors = ["Identicon <identicon.dao@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.5"
near-contract-standards = "4.0.0"
hex = "0.4.3"
serde = "1.0"
serde_json = "1.0"
near-sys = "0.1.0"
#rand = { version = "0.8.5", features = ["small_rng"] }
#getrandom = { version = "0.2", features = ["js"] }